@@ -1,0 +1,8 @@
+package cryptoBot;
+
+public class DepositWallet extends Deposit{
+	private String walletAddress;
+	private int walletID;
+	private double coinAmmount;
+	
+}
